aks-staging/director/path-route-alternative.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: path-route
  namespace: director
spec:
  parentRefs:
  - name: sensei-gateway
    namespace: director
  hostnames:
  - "director.phamid.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: director-sensei-frontend
      port: 80
