aks-staging/director/path-route-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: path-route-redirect
  namespace: director
spec:
  parentRefs:
  - name: sensei-gateway
    namespace: director
  hostnames:
  - "redirect.phx4-dpms-app-aks.csdental.com"
  - "redirect.phamid.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: redirect-sensei-sensei-redirect
      port: 80
