aks-staging/director/path-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: path-route
  namespace: director
spec:
  parentRefs:
  - name: sensei-gateway
    namespace: director
  # hostnames:
  # - "phx4-dpms-app-aks.csdental.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: director-sensei-frontend
      port: 80
